ligolang/src/test/contracts/negative/switch_jsligo/empty_switch.jsligo
let empty_switch = (_n : int) : string => {
    let output = "Hello";
    switch (n) {
    };
    output = output + "World"; 
    return output;
};